@@ -1,3 +1,7 @@
+2007-08-09  Badlop  <badlop@ono.com>
+
+	* src/mod_multicast.erl: Implement XEP33 limits: 3) receive remote limits.
+
 2007-08-07  Badlop  <badlop@ono.com>
 
 	* src/mod_multicast.erl: Fixed indentation. No differentiation 
